--- a/index.html
+++ b/index.html
@@ -118,6 +118,42 @@
         <img src="./gm/cobalt.jpg" alt="">
     </div>
 </div>
-      
+      <div class="ire">
+        <div class="fr">
+            <h2>Brendlar</h2>
+            <img src="./gm/logo.png" alt="">
+            
+        </div>
+        <div class="fr">
+            <ul>
+                <li class="iten">Yangiliklar</li>
+                <li class="iten"> FAQ</li>
+                <li class="iten">Fotolavhalar</li>
+                <li class="iten">Fotolavhalar</li>
+                <li class="iten">Vedoshunoslar</li>
+                <li class="iten">Bosh ish orinlar</li>
+            </ul>
+        </div>
+        <div class="fr">
+            <ul>
+                <li class="iten"> Korporativ axborot yagona portali</li>
+                <li class="iten"> O'zbekiston Respublikasi Prezidenti Sh.M. Mirziyoyevning</li>
+                <li class="iten">Yagona interaktiv davlat xizmatlari portali</li>
+                <li class="iten">Resurs bozori ma'lumoti va resurs markazi</li>
+                <li class="iten">virtual qabulxonasi</li>
+                <li class="iten">Korporativ axborot yagona portali</li>
+            </ul>
+        </div>
+        <div class="fr">
+            <ul>
+                <li class="iten">Manzil</li>
+                <li class="iten"> Toshkent sh., Mirobod tumani, A. Temur ko'chasi, 13 uy</li>
+                <li class="iten"> Ish vaqti: 09:00-18:00</li>
+                <li class="iten">Tushlik: 13:00-14:00</li>
+                <li class="iten">Xaritada ko`rish</li>
+                <li class="iten"></li>
+            </ul>
+        </div>
+      </div>
 </body>
 </html>
